hphp/test/zend/good/ext/gettext/tests/gettext_textdomain-wrongparams.php.skipif
<?php 
	if (!extension_loaded("gettext")) {
		die("skip\n");
	}
	if (!setlocale(LC_ALL, 'en_US.UTF-8')) {
		die("skip en_US.UTF-8 locale not supported.");
	}
?>